examples/test/testpolicy19468.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19468
  namespace: namespace487
spec:
  podSelector:
    matchLabels:
      key11: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value35
          key27: value48
      podSelector:
        matchLabels:
          key44: value17
          key34: value22
          key48: value38
